[gd_scene load_steps=43 format=4 uid="uid://dqbgs46e12t0x"]

[ext_resource type="Script" path="res://shared/ui/hub_scenario/hub_scenario.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://53grjrcsf3cj" path="res://shared/assets/highlights/highlight0000.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bse70j4p8ei7v" path="res://shared/assets/highlights/highlight0001.png" id="3"]
[ext_resource type="Texture2D" uid="uid://epfuctgop7g3" path="res://shared/assets/highlights/highlight0002.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ddvcwk5l3jb46" path="res://shared/assets/highlights/highlight0003.png" id="5"]
[ext_resource type="Texture2D" uid="uid://u47ghowerjbt" path="res://shared/assets/highlights/highlight0004.png" id="6"]
[ext_resource type="Texture2D" uid="uid://ddh5k43do5urw" path="res://shared/assets/highlights/highlight0005.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cg8kxsp1osb0n" path="res://shared/assets/highlights/highlight0006.png" id="8"]
[ext_resource type="Texture2D" uid="uid://co3mnu5p0kv2s" path="res://shared/assets/highlights/highlight0007.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cuk3p528qjdra" path="res://shared/assets/highlights/highlight0008.png" id="10"]
[ext_resource type="Texture2D" uid="uid://b53mliqqga2s0" path="res://shared/assets/highlights/highlight0009.png" id="11"]
[ext_resource type="Texture2D" uid="uid://d2n6eap75ftmg" path="res://shared/assets/highlights/highlight0010.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bconjqx51fl2d" path="res://shared/assets/highlights/highlight0011.png" id="13"]
[ext_resource type="Texture2D" uid="uid://dxvwni5xje667" path="res://shared/assets/highlights/highlight0012.png" id="14"]
[ext_resource type="Texture2D" uid="uid://c5opi5h1ywa3e" path="res://shared/assets/icons/spot_animation/changelocation0000.png" id="15"]
[ext_resource type="Texture2D" uid="uid://2wxoky3gio7n" path="res://shared/assets/icons/spot_animation/changelocation0001.png" id="16"]
[ext_resource type="Texture2D" uid="uid://s84vbg0itjcx" path="res://shared/assets/icons/spot_animation/changelocation0002.png" id="17"]
[ext_resource type="Texture2D" uid="uid://cxyggkxx83sjv" path="res://shared/assets/icons/spot_animation/changelocation0003.png" id="18"]
[ext_resource type="Texture2D" uid="uid://b8rtks7hwa5nl" path="res://shared/assets/icons/spot_animation/changelocation0004.png" id="19"]
[ext_resource type="Texture2D" uid="uid://ck6jhpf4ygqo" path="res://shared/assets/icons/spot_animation/changelocation0005.png" id="20"]
[ext_resource type="Texture2D" uid="uid://dutd6jjuqtnai" path="res://shared/assets/icons/spot_animation/changelocation0006.png" id="21"]
[ext_resource type="Texture2D" uid="uid://cein5mkj2uunw" path="res://shared/assets/icons/spot_animation/changelocation0007.png" id="22"]
[ext_resource type="Texture2D" uid="uid://bdddpcb7qjyoj" path="res://shared/assets/icons/spot_animation/changelocation0008.png" id="23"]
[ext_resource type="Texture2D" uid="uid://b152cbwbpsfyk" path="res://shared/assets/icons/spot_animation/changelocation0009.png" id="24"]
[ext_resource type="Texture2D" uid="uid://c3tn0ao08lyty" path="res://shared/assets/icons/spot_animation/changelocation0010.png" id="25"]
[ext_resource type="Texture2D" uid="uid://dhd8c3isad8bf" path="res://shared/assets/icons/spot_animation/changelocation0011.png" id="26"]
[ext_resource type="Texture2D" uid="uid://8477ql3xp8g6" path="res://shared/assets/icons/spot_animation/changelocation0012.png" id="27"]
[ext_resource type="Texture2D" uid="uid://dlabhk2mbxqtx" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0000.png" id="28"]
[ext_resource type="Texture2D" uid="uid://b4n161g8dpb0h" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0001.png" id="29"]
[ext_resource type="Texture2D" uid="uid://voydrsltlc6c" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0002.png" id="30"]
[ext_resource type="Texture2D" uid="uid://bhy3i0d75ptbc" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0003.png" id="31"]
[ext_resource type="Texture2D" uid="uid://c7x88no1mich5" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0004.png" id="32"]
[ext_resource type="Texture2D" uid="uid://bgy7nym4uwiy5" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0005.png" id="33"]
[ext_resource type="Texture2D" uid="uid://de33b704361ul" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0006.png" id="34"]
[ext_resource type="Texture2D" uid="uid://cy27syghfsrbv" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0007.png" id="35"]
[ext_resource type="Texture2D" uid="uid://dhug8vuwlpwed" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0008.png" id="36"]
[ext_resource type="Texture2D" uid="uid://cbcrq6aefjvsf" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0009.png" id="37"]
[ext_resource type="Texture2D" uid="uid://doljd37k1jl66" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0010.png" id="38"]
[ext_resource type="Texture2D" uid="uid://cbqsw817mt751" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0011.png" id="39"]
[ext_resource type="Texture2D" uid="uid://b6t4fpsesdc3u" path="res://shared/assets/icons/hotspot_done_animation/hotspotdone0012.png" id="40"]
[ext_resource type="Texture2D" uid="uid://bmq5a7ylfmmwc" path="res://shared/assets/placeholder_ui/buttons/solved.png" id="41"]

[sub_resource type="SpriteFrames" id="SpriteFrames_07sqy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("21")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}, {
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("24")
}, {
"duration": 1.0,
"texture": ExtResource("25")
}, {
"duration": 1.0,
"texture": ExtResource("26")
}, {
"duration": 1.0,
"texture": ExtResource("27")
}],
"loop": true,
"name": &"location",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28")
}, {
"duration": 1.0,
"texture": ExtResource("29")
}, {
"duration": 1.0,
"texture": ExtResource("30")
}, {
"duration": 1.0,
"texture": ExtResource("31")
}, {
"duration": 1.0,
"texture": ExtResource("32")
}, {
"duration": 1.0,
"texture": ExtResource("33")
}, {
"duration": 1.0,
"texture": ExtResource("34")
}, {
"duration": 1.0,
"texture": ExtResource("35")
}, {
"duration": 1.0,
"texture": ExtResource("36")
}, {
"duration": 1.0,
"texture": ExtResource("37")
}, {
"duration": 1.0,
"texture": ExtResource("38")
}, {
"duration": 1.0,
"texture": ExtResource("39")
}, {
"duration": 1.0,
"texture": ExtResource("40")
}],
"loop": true,
"name": &"visited",
"speed": 12.0
}]

[node name="HubScenario" type="Control"]
layout_mode = 3
anchors_preset = 0
focus_mode = 2
script = ExtResource("1")

[node name="Highlighter" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_07sqy")
frame_progress = 0.2722730040550232

[node name="TextureButton" type="TextureButton" parent="."]
unique_name_in_owner = true
modulate = Color(0.705882, 0.705882, 0.705882, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
focus_mode = 0

[node name="SolvedIcon" type="TextureRect" parent="TextureButton"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -141.0
offset_bottom = 134.0
grow_horizontal = 0
texture = ExtResource("41")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
